# ORATOR-ATLAS

./: .gitignore  ATLAS Instance Diagram.drawio  ATLAS_v2.0.2.owl  README.md  Untitled Diagram.drawio
ATLAS_OWL/: ATLAS_v2.0.1.owl  ATLAS_v2.0.3.owl  ATLAS_v2.0.3.properties  ATLAS_v2.0.4.owl  ATLAS_v2.0.4.properties  ATLAS_v2.0.5.owl  ATLAS_v2.0.5.properties  ATLAS_v2.0.6.owl
Examples/: img_from_json.py  instance_statistics.py
Mappings_OWL/: A2D2.json  DeepScene.json  GOOSE.json  RELLIS3D.json  RUGD.json  YCOR.json
Mappings_RGB/: A2D2_dataset.json  DeepScene_Freiburg_dataset.json  GOOSE_dataset.json  RUGD_dataset.json  Rellis3D_dataset.json  YCOR_dataset.json  test_dataset.json  unify_dataset.csv  unify_dataset_rgb.json
OntologyInstantiation/: img1_ontology.owl  main.py
OntologyInstantiation/JSON files/: Class2OntologyMapping.json
OntologyInstantiation/json/: RUGD.json  YCOR.json  segmented_output_240.json  test_dataset.json
SemanticImage/: CMakeLists.txt  main.cpp
SemanticImage/json/: Rellis3D_dataset.json  segmented_output_240.json
Testing/: PixelAnalysisActualDataset.py  PixelAnalysisOWLFiles.py  QuerryClassesInOWL.py  extract_rgb.py  img_from_json.py  instance_statistics.py  rgb_map_from_csv  rgb_map_from_csv.py
Testing/results/: NoOfPixels_Data.xlsx  NoOfPixels_DataUniqueClasses.xlsx  PixelsPerClass.txt  PixelsPerClass_A2D2.txt  PixelsPerClass_RELLIS.txt  PixelsPerClass_RUGD.txt  PixelsPerClass_YCOR.txt  PixelsPerClass_freiburg.txt  pixelPerClassInDataset_A2D2.txt  pixelPerClassInDataset_RELLIS.txt  pixelPerClassInDataset_RUGD.txt  (+2 more)
(+19 files in other folders)
